--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -9,6 +9,13 @@
 			<div class="row">
 				<div class="col-12">
 					<h1>Smart Egg</h1>
+					
+					<!-- Btn Row -->
+					<div class="row">
+						<div class="col-6">
+							<button onclick="getData()">Get Data</button>
+						</div>
+					</div>
 				</div>
 			</div> <!-- End header row -->
 
