--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -13,7 +13,7 @@
 					<!-- Btn Row -->
 					<div class="row">
 						<div class="col-6">
-							<button onclick="getData()">Get Data</button>
+							<button onclick="getData">Get Data</button>
 						</div>
 					</div>
 				</div>
