simple stock chart implemented as sample

--- a/dashboard/highchart/highchart.html
+++ b/dashboard/highchart/highchart.html
@@ -2,11 +2,6 @@
     <header>
       <link rel="stylesheet" href="../simple-grid.min.css">
       <script src="https://code.highcharts.com/stock/highstock.js"></script>
-      <script src="https://code.highcharts.com/stock/modules/exporting.js"></script>
-      
-      <!-- <script src="https://code.highcharts.com/highcharts.js"></script>
-      <script src="https://code.highcharts.com/modules/series-label.js"></script>
-      <script src="https://code.highcharts.com/modules/exporting.js"></script>     -->
     </header>
 
     <style>
@@ -27,7 +22,7 @@
             <!-- Btn Row -->
             <div class="row">
               <div class="col-6">
-                <button onclick="getData">Get Data</button>
+                <button onclick="getData()">Get Data</button>
               </div>
             </div>
           </div>
