added record button to ctrl, no functionality yet

--- a/dashboard/highchart/highchart.html
+++ b/dashboard/highchart/highchart.html
@@ -5,12 +5,13 @@
     </header>
 
     <style>
-    #myChart {
-	min-width: 310px;
+    #container {
+	min-width: 600px;
 	max-width: 800px;
 	height: 400px;
 	margin: 0 auto
 }
+
 </style>
     <body>
       <div class="container">
@@ -32,7 +33,7 @@
           <div class="col-12">
   
               <!-- <canvas id="myChart" width="400" height="400"></canvas>						 -->
-              <div id="container"></div>
+              <div id="myChart"></div>
           </div>
         </div> <!-- End Canvas Row -->
   
