added high chart to start on record click

--- a/dashboard/highchart/master-controller.html
+++ b/dashboard/highchart/master-controller.html
@@ -48,7 +48,7 @@
                 <!-- <button onclick="getData()">Get Data</button> -->
 
                 <div class="btn-group">
-                    <button class="button">Record New</button>
+                    <button onclick="record()" class="button">Record New</button>
                   </div>
 
               </div>
