can clear data now, data starts as empty

--- a/dashboard/highchart/master-controller.html
+++ b/dashboard/highchart/master-controller.html
@@ -49,6 +49,7 @@
 
                 <div class="btn-group">
                     <button onclick="record()" class="button">Record New</button>
+                    <button onclick="destory()" class="button">Clear</button>
                   </div>
 
               </div>
