added stop button for recording

--- a/dashboard/highchart/master-controller.html
+++ b/dashboard/highchart/master-controller.html
@@ -41,20 +41,21 @@
             
             <!-- Btn Row -->
             <div class="row">
-              <div class="col-4"> 
+              <div class="col-3"> 
                 <!-- Left Btn Div -->
               </div>
-              <div class="col-4">
+              <div class="col-6">
                 <!-- <button onclick="getData()">Get Data</button> -->
 
                 <div class="btn-group">
                     <button onclick="record()" class="button">Record New</button>
+                    <button onclick="stop()" class="button">Stop</button>                    
                     <button onclick="destory()" class="button">Clear</button>
                   </div>
 
               </div>
 
-              <div class="col-4">
+              <div class="col-3">
                 <!-- Right Btn Div -->
               </div>
 
