--- a/dashboard/highchart/master-controller.html
+++ b/dashboard/highchart/master-controller.html
@@ -1,6 +1,7 @@
 <html>
     <header>
       <link rel="stylesheet" href="../simple-grid.min.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
       <script src="https://code.highcharts.com/stock/highstock.js"></script>
     </header>
 
@@ -48,8 +49,8 @@
                 <!-- <button onclick="getData()">Get Data</button> -->
 
                 <div class="btn-group">
-                    <button onclick="record()" class="button">Record New</button>
-                    <button onclick="stop()" class="button">Stop</button>                    
+                    <button id="record" onclick="record()" class="button">Record New</button>
+                    <button id="stop" onclick="stop()" class="button">Stop</button>                    
                     <button onclick="destory()" class="button">Clear</button>
                   </div>
 
@@ -66,7 +67,7 @@
         <div class="row">
           <div class="col-12">
             <!-- Charting section -->
-            <div id="myChart"></div>
+            <div id="container"></div>
           </div>
         </div> <!-- End Canvas Row -->
   
