list on left created for each drop, buttons need to be implimented

--- a/dashboard/highchart/master-controller.html
+++ b/dashboard/highchart/master-controller.html
@@ -2,7 +2,8 @@
     <header>
       <link rel="stylesheet" href="../simple-grid.min.css">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-      <script src="https://code.highcharts.com/stock/highstock.js"></script>
+      <!-- <script src="https://code.highcharts.com/stock/highstock.js"></script> -->
+      <script src="./highstockchart.js"></script>
     </header>
 
     <style>
@@ -51,7 +52,6 @@
                 <div class="btn-group">
                     <button id="record" onclick="record()" class="button">Record New</button>
                     <button id="stop" onclick="stop()" class="button">Stop</button>                    
-                    <button onclick="destory()" class="button">Clear</button>
                   </div>
 
               </div>
@@ -65,7 +65,13 @@
         </div> <!-- End header row -->
   
         <div class="row">
-          <div class="col-12">
+          <div class="col-2">
+            <!-- List of saved charts -->
+            <ul id="drop-history">
+
+            </ul>
+          </div>
+          <div class="col-10">
             <!-- Charting section -->
             <div id="container"></div>
           </div>
