--- a/dashboard/highchart/master-controller.html
+++ b/dashboard/highchart/master-controller.html
@@ -1,9 +1,8 @@
 <html>
     <header>
       <link rel="stylesheet" href="../simple-grid.min.css">
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-      <!-- <script src="https://code.highcharts.com/stock/highstock.js"></script> -->
-      <script src="./highstockchart.js"></script>
+      <script src="./jquery.min.js"></script>
+      <script src="./highstockchart.min.js"></script>
     </header>
 
     <style>
