added the chart and js files to the website.h file along with the minified highchart file

--- a/dashboard/highchart/simple-graph.html
+++ b/dashboard/highchart/simple-graph.html
@@ -5,6 +5,7 @@
   <title>Digital Egg Drop Page</title>
   <!-- <script src="./scripts.js"></script> -->
   <script src="./highchart.min.js"></script>
+  <script src="./simple-graph.js"></script>
   
   </head>
   <body>
@@ -14,7 +15,7 @@
       <button type="button" onclick="stopRecord()">Stop Recording</button>
       <button type="button" onclick="getData()">Get Data</button>
     </div>
-    
+
     <div id="container">
       <!-- Chart here -->
     </div>   
