added tabs to page

--- a/html/index.html
+++ b/html/index.html
@@ -48,8 +48,20 @@
         </div>
       </section>
 
-        <!-- Table Row -->
         <div class="custom-container">
+          <div class="columns">
+            <!-- Drop history buttons -->
+            <div class="column is-12">
+              <div class="tabs is-boxed">
+                <ul id="drop-history">
+                  <li class="is-active"><a>Run 1</a></li>
+                  <li><a>Run 2</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <!-- Table Row -->          
           <div class="columns">
             <div class="column is-2">
               <!-- Center column used for instant data -->
