added some code for ajax addition of buttons

--- a/html/index.html
+++ b/html/index.html
@@ -50,7 +50,23 @@
 
         <div class="custom-container">
           <div class="columns">
-            <!-- Drop history buttons -->
+            <div class="column is-12">
+              <!-- Input button area -->
+              <div class="field has-addons">
+                <div class="control">
+                  <input id="drop-name" class="input" type="text" placeholder="Drop Name">
+                </div>
+                <div class="control">
+                  <a class="button is-success">
+                    Start Recording
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="columns">
+            <!-- Drop history Tabs -->
             <div class="column is-12">
               <div class="tabs is-boxed">
                 <ul id="drop-history">
