--- a/html/index.html
+++ b/html/index.html
@@ -12,9 +12,14 @@
       min-width: 600px;
       height: 400px;
       margin: 0 auto;
-      margin-top: 8px;
-      margin-left: 50px;
-      margin-right: 50px;
+      margin-top: 20px;
+      margin-left: 20px;
+      margin-right: 20px;
+    }
+
+    .form-label {
+      font-weight: bold;
+      font-size: 18px;
     }
 
 
@@ -37,49 +42,67 @@
                 </ul>
               </p>
             </h2>
-            <h2 class="subtitle">
               <p> 
-                <button id="record" type="button b" class="button is-success" onclick="startRecord()">Start Recording</button>
-                <button id="stop" type="button" class="button is-danger" onclick="stopRecord()">Stop Recording</button>
-                <button id="downloadBtn" type="submit" class="button is-info" onclick="window.open('rawdata.csv')">Download Last Run</button>  
+                <div class="field has-addons">
+                  <div class="control">
+                    <input id="team-name" class="input" type="text" placeholder="Team Name">
+                  </div>
+                  <div class="control">
+                    <button class="button is-info" onclick="addTeam()">
+                      Create a Team!
+                    </button>
+                  </div>
+                </div>
               </p>
-            </h2>
           </div>
+        </div>
+
+        <!-- Drop history Tabs -->
+        <div class="hero-foot">
+          <nav class="tabs is-boxed is-fullwidth">
+            <div class="container">
+              <ul id="drop-history">
+                <!-- Team name List elements here -->
+              </ul>
+            </div>
+          </nav>
         </div>
       </section>
 
-        <div class="custom-container">
+        <div id="team-details-container" class="custom-container">
+
           <div class="columns">
             <div class="column is-12">
-              <!-- Input button area -->
-              <div class="field has-addons">
-                <div class="control">
-                  <input id="drop-name" class="input" type="text" placeholder="Drop Name">
-                </div>
-                <div class="control">
-                  <a class="button is-success">
-                    Start Recording
-                  </a>
-                </div>
-              </div>
+              <nav class="level">
+                <p class="level-item has-text-centered">
+                    <button id="record" type="button" class="button is-success" onclick="startRecord()">Start Recording</button>
+                    <button id="stop" type="button" class="button is-danger" onclick="stopRecord()">Stop Recording</button>
+                    <button id="downloadBtn" type="submit" class="button is-info" onclick="window.open('rawdata.csv')">Download Run</button> 
+                    <button id="loading-btn" type="submit" class="button is-info is-loading">Loading...</button> 
+                </p>
+              </nav>
+ 
             </div>
           </div>
 
+          <!-- Chart Columns -->
           <div class="columns">
-            <!-- Drop history Tabs -->
             <div class="column is-12">
-              <div class="tabs is-boxed">
-                <ul id="drop-history">
-                  <li class="is-active"><a>Run 1</a></li>
-                  <li><a>Run 2</a></li>
-                </ul>
-              </div>
+              <nav class="level">
+                <p id="container" class="level-item has-text-centered">
+                  <!-- Chart's Column -->        
+                  <button id="show-latest-btn" type="button" class="button is-primary" onclick="showLatestTable()">Show Latest Chart</button>
+                  <!-- Charting section -->
+                  <div><div ></div></div>
+                  
+                </p>
+              </nav>
             </div>
-          </div>
+          </div> <!-- End Chart's Row -->
 
           <!-- Table Row -->          
           <div class="columns">
-            <div class="column is-2">
+            <div class="column is-12">
               <!-- Center column used for instant data -->
               <button class="button is-link" onclick="updateTable()">Update Table</button> 
               <table>
@@ -105,28 +128,10 @@
                 </tr>
               </table>
           </div> <!-- End col for table -->
-
-          <!-- Chart's Column -->
-          <div class="column is-10">
-            <button id="show-latest-btn" type="button" class="button is-primary" onclick="showLatestTable()">Show Latest Chart</button>
-            <!-- Charting section -->
-            <div id="container"></div>
-          </div>
       </div> <!-- End Table Row -->
-    </div>
-    <div class="row">
-      <div class="col-2">
-        <!-- List of saved charts -->
-        <ul id="drop-history">
+    </div> <!-- End custom container -->
 
-        </ul>
 
-      </div>
-      <div class="col-10">
-        
-
-      </div>
-    </div> <!-- End Chart's Row -->
 
 
 
