--- a/html/index.html
+++ b/html/index.html
@@ -22,16 +22,19 @@
       font-size: 18px;
     }
 
+
+    /* Top Right corner Button placement for Delete Drop button */
     #delete-button {
-     /* line-height: 12px; */
-     /* width: 18px; */
-     /* font-size: 8pt; */
-     /* font-family: tahoma; */
      margin-top: 1px;
      margin-right: 2px;
      float:right;
      top:0;
      right:0;
+    }
+
+    /* Class for elements hidden on load */
+    .hide-by-default {
+      display: none;
     }
 
 
@@ -79,7 +82,7 @@
         </div>
       </section>
 
-        <div id="drop-details-container" class="custom-container">
+        <div id="drop-details-container" class="custom-container hide-by-default">
           <button id="delete-button" class="delete is-medium" onclick="openConfirmDeleteDialog()">Delete Drop</button>
 
           <div class="columns">
@@ -88,7 +91,7 @@
                 <p class="level-item has-text-centered">
                     <button id="record" type="button" class="button is-success" onclick="startRecord()">Start Recording</button>
                     <button id="stop" type="button" class="button is-danger" onclick="stopRecord()">Stop Recording</button>
-                    <button id="download-btn" type="submit" class="button is-info" onclick="window.open('rawdata.csv')">Download Run</button> 
+                    <button id="download-btn" type="submit" class="button is-info" onclick="window.open('rawdata.csv')">Download CSV</button> 
                     <button id="loading-btn" type="submit" class="button is-info is-loading">Loading...</button> 
                 </p>
               </nav>
@@ -144,7 +147,7 @@
 
 <!-- Delete Confirmation Modal -->
 <div id="modal-area">
-  
+
 </div>
 
 
