added random generation of datafor drops on load

--- a/html/index.html
+++ b/html/index.html
@@ -61,7 +61,7 @@
                     <input id="drop-name" class="input" type="text" placeholder="Drop Name">
                   </div>
                   <div class="control">
-                    <button class="button is-info" onclick="addDrop()">
+                    <button class="button is-info" onclick="addNewDrop()">
                       Create a Drop!
                     </button>
                   </div>
