--- a/html/index.html
+++ b/html/index.html
@@ -91,8 +91,8 @@
                 <p class="level-item has-text-centered">
                     <button id="record" type="button" class="button is-success" onclick="startRecord()">Start Recording</button>
                     <button id="stop" type="button" class="button is-danger" onclick="stopRecord()">Stop Recording</button>
-                    <button id="download-btn" type="submit" class="button is-info" onclick="window.open('rawdata.csv')">Download CSV</button> 
                     <button id="loading-btn" type="submit" class="button is-info is-loading">Loading...</button> 
+                    <button id="download-btn" type="submit" class="button is-info" onclick="window.open('rawdata.csv')">Download CSV</button> 
                 </p>
               </nav>
  
@@ -103,7 +103,7 @@
           <div class="columns">
             <div class="column is-12">
               <nav class="level">
-                <p id="container" class="level-item has-text-centered">
+                <p id="charting-container" class="level-item has-text-centered">
                   <!-- Chart's Column -->        
                   <button id="show-latest-btn" type="button" class="button is-primary" onclick="showLatestTable()">Show Latest Chart</button>
                   <!-- Charting section -->
