Removed the auto generation of random tabs. Updated steps to create a drop

--- a/html/index.html
+++ b/html/index.html
@@ -49,9 +49,14 @@
             <h2 class="subtitle">
               <p>Here is how this currently works...
                 <ul>
-                  <li>1. Select Start Record button</li>
-                  <li>2. Select the Stop Record button, don't wait too long this is kind of slow still </li>
-                  <li>3. Select the show latest chart button</li>
+                  <li>1. Create a drop</li>
+                  <li>2. Selet the newly created drop tab </li>
+                  <li>3. Select the start recording button to start recording a drop</li>
+                  <li>4. Select "Stop Recording" to stop recording the drop</li>
+                  <li>5. The graph will automatically start downloading the drop
+                    data. This may take a few seconds.
+                  </li>
+
                 </ul>
               </p>
             </h2>
