Added changes made to incorporate the additional api end points and add async calls

--- a/html/index.html
+++ b/html/index.html
@@ -97,6 +97,7 @@
                     <button id="record" type="button" class="button is-success" onclick="startRecord()">Start Recording</button>
                     <button id="stop" type="button" class="button is-danger" onclick="stopRecord()">Stop Recording</button>
                     <button id="loading-btn" type="submit" class="button is-info is-loading">Loading...</button> 
+                    <button id="get-data-btn" type="submit" class="button is-info" onclick="getDropData()">Plot Data</button> 
                     <button id="download-btn" type="submit" class="button is-info" onclick="window.open('rawdata.csv')">Download CSV</button> 
                 </p>
               </nav>
